--- a/css/style.css
+++ b/css/style.css
@@ -2,22 +2,51 @@
     width: 100px;
     height: 100px;
     border: 1px solid red;
+    transition: background-color 2s;
 }
+
+.ex-1-square:hover {
+    width: 100px;
+    height: 100px;
+    background-color:red;
+    border: 1px solid red;
+}
+
 .ex-2-square {
     width: 100px;
     height: 100px;
     background: red;
+    transition: width 2s;
 }
+
+.ex-2-square:active {
+    width: 100%;
+}
+
 .ex-3-square {
     width: 100px;
     height: 100px;
     background: red;
+    transition: border-radius 1s;
 }
+
+.ex-3-square:hover {
+    border-radius:50%;
+}
+
 .ex-4-square {
     width: 100px;
     height: 100px;
     background: red;
+    transition: background-color 1s;
 }
+
+.ex-4-square:hover {
+    width: 100px;
+    height: 100px;
+    background: transparent;
+}
+
 .ex-5-square {
     margin: 20px;
     width: 60px;
