--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,20 @@
     width: 60px;
     height: 60px;
     background: red;
+    transition: transform 2s;
 }
+
+.ex-5-square:hover {
+    transform: scale(2);
+    background: red;
+}
+
+.ex-5-square:active {
+    transform: scale(0.5);
+    background: red;
+}
+
+
 .ex-6-img, .ex-7-img, .ex-8-img {
     width: 500px;
 }
