--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,15 @@
     filter: grayscale(1);
 }
 
+.ex-7-img{
+    transition: filter 2s;
+}
+
+.ex-7-img:hover{
+    filter: grayscale(0.6);
+    filter: sepia(0.6);
+}
+
 .ex-9-img {
     margin: 50px 100px;
     width: 400px;
