--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,17 @@
 
 .ex-10-icon {
     font-size: 60px;
+    animation-name: rotate;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
 }
+
+@keyframes rotate{
+    from{ transform: rotate(360deg); }
+    to{ transform: rotate(-360deg); }
+}
+
 .ex-11-icon {
     font-size: 60px;
 }
