--- a/css/style.css
+++ b/css/style.css
@@ -119,8 +119,8 @@
 }
 
 @keyframes rotate1{
-    10% { transform: rotate(250deg); }
-    50% { transform: rotate(290deg); }
+    from { transform: rotate(250deg); }
+    to { transform: rotate(290deg); }
 }
 
 .ex-11-icon {
@@ -132,7 +132,6 @@
     animation-duration: 2s;
     animation-timing-function: linear;   
 }
-
 
 .ex-12-button, .ex-13-button {
     position: relative;
@@ -154,7 +153,48 @@
     background: #f5f5f5;
     width: 60px;
     height: 20px;
+
 }
+
+.ex-12-button:hover .ex-12-top-white {
+    animation: top 3s linear;
+}
+
+.ex-12-button:hover .ex-12-bottom-white {
+    animation: bottom 3s linear;
+}
+
+@keyframes top {
+    0% {
+         top:-10%;
+         left: 10%;
+    }
+    30% {
+        top:-10%;
+        left: 25%;
+    }
+      70% {
+        top:-10%;
+        left: 69%;
+    }   
+  }
+
+  @keyframes bottom{
+    0% {
+        bottom: -10px;
+        right: 20%;
+    }
+    30% {
+        bottom: -10px;
+        right: 50%;
+      }
+      70% {
+        bottom: -10px;
+        right: 69%;
+      }   
+  }
+
+
 .ex-12-bottom-white, .ex-13-bottom-white {
     position: absolute;
     bottom: -10px;
