--- a/css/style.css
+++ b/css/style.css
@@ -209,3 +209,60 @@
 
 /*Esercizio 12*/
 
+.ex-13-button:hover .ex-13-top-white {
+    animation: top1 3s linear;
+}
+
+.ex-13-button:hover .ex-13-bottom-white {
+    animation: bottom1 3s linear;
+}
+
+@keyframes top1{
+    0% {
+         top:-10px;
+         left: -30%;
+    }
+    25% {
+        top:-10px;
+        left: 90%;
+    }
+      50% {
+        top:calc(100% - 10px);
+        left: 75%;
+    }
+    75% {
+        top:calc(100% - 10px);
+        left: 10%;
+    }   
+    100% {
+        top:-10px;
+        left: -30%;
+    }     
+  }
+
+  @keyframes bottom1{
+    0% {
+        bottom: -10px;
+        right: 20%;
+    }
+    30% {
+        right: calc(100% - 30px);
+        bottom: -10px;
+    }
+    45% {
+        right: calc(100% - 30px);
+        bottom: 100%;
+    }
+    75% {
+        right: 0;
+        bottom: 100%;
+    }
+    90% {
+        right: -15px;
+        bottom: -10px;
+    }
+    100% {
+        bottom: -10px;
+        right: 20%;
+    }
+}
