--- a/css/style.css
+++ b/css/style.css
@@ -245,18 +245,18 @@
         bottom: -10px;
         right: 20%;
     }
-    30% {
+    25% {
         right: calc(100% - 30px);
         bottom: -10px;
     }
-    45% {
+      50% {
         right: calc(100% - 30px);
-        bottom: 100%;
+        bottom: 100%;;
     }
     75% {
         right: 0;
         bottom: 100%;
-    }
+    }   
     90% {
         right: -15px;
         bottom: -10px;
@@ -264,5 +264,6 @@
     100% {
         bottom: -10px;
         right: 20%;
-    }
-}
+    }     
+  }
+
